Added a new "onTextChanged" interface to call a callback from the editor when the content has changed

--- a/krichtexteditor/src/main/assets/richEditor.html
+++ b/krichtexteditor/src/main/assets/richEditor.html
@@ -11,6 +11,7 @@
     <script src="quill/quill.js"></script>
 
     <script src='kricheditor.js'></script>
+    <script src=''></script>
 </head>
 <style>
     #editor {
